test/good/automatic/extension/mixed/without_input/ret_zero/0010.lat
class C {
	int[] fld;
}
class M {
	C foo() { return new C; }
}

void tester() {
	(new M).foo().fld = new int[3];
}
int main() {
	return 0;
}
