test/bad/automatic/extension/mixed/compile_time/0002.lat
class janusz {
  int andrzej;
}

class zygmunt extends janusz {
  int krystyna;
}

int main() {
  zygmunt[] zygmunt = new janusz [20];
  return zygmunt.krystyna;
}
